--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ form {
 	border-radius: 100%;
 }
 
-img:hover {
+.whatsbouge {
   animation: shake 0.5s;
   animation-iteration-count: infinite;
 }
