--- a/css/style.css
+++ b/css/style.css
@@ -17,30 +17,99 @@ p {
 
 }
 
-form {
-	border: 1px black;
-	text-align: center;
-}
 .carousel-caption {
 	font: italic 1em "Fira Sans", serif;
 	border-radius: 100%;
 }
 
-.whatsbouge {
-  animation: shake 5s;
-  animation-iteration-count: infinite;
+.mypage-alo-phone {
+    position: fixed;
+    bottom: 120px;
+    left: 0;
+    z-index: 999
 }
 
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+.mypage-alo-ph-circle {
+    border-color: #43b91e;
+}
+
+.mypage-alo-ph-circle-fill {
+    background-color: #43b91e;
+}
+
+.mypage-alo-ph-img-circle {
+    background-color: #43b91e;
+}
+
+.mypage-alo-phone:hover .mypage-alo-ph-circle {
+    border-color: #43b91e;
+}
+
+.mypage-alo-phone:hover .mypage-alo-ph-circle-fill {
+    background-color: #43b91e;
+}
+
+.mypage-alo-phone:hover .mypage-alo-ph-img-circle {
+    background-color: #43b91e;
+}
+.mypage-alo-ph-img-circle {
+    width: 30px;
+    height: 30px;
+    top: 43px;
+    left: 43px;
+    position: absolute;
+    background: rgba(30, 30, 30, 0.1) url(https://www.aspatercume.com/wp-content/uploads/2019/12/whatsapp-icon-logo.png) no-repeat center center;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    opacity: 1;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-transform-origin: 50% 50%;
+    -moz-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    -o-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    background-size: 100%;
+}
+.mypage-alo-ph-circle-fill {
+    width: 60px;
+    height: 60px;
+    top: 28px;
+    left: 28px;
+    position: absolute;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    border: 2px solid transparent;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    opacity: .4 !important;
+}
+.mypage-alo-ph-circle{
+    width: 90px;
+    height: 90px;
+    top: 12px;
+    left: 12px;
+    position: absolute;
+    background-color: transparent;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    border: 2px solid rgba(30, 30, 30, 0.4);
+    opacity: .1;
+    opacity: .5;
+}
+
+.mini-widgets .text-area a:not(.dt-btn), .mobile-mini-widgets .text-area a:not(.dt-btn) {
+text-decoration: none;
 }
